<resources>
    <string name="app_name">AppOpay</string>
    <string name="copyright">Copyright &#169;. All Rights Reserved.</string>
    <string name="select_country_code">Please select country code</string>
    <string name="code"><u>code</u></string>
    <string name="setting_error">Your login details does not exists, please login to change your password.</string>
    <string name="profile_update_error">Your login details does not exists, please login to update your profile.</string>
    <string name="profile_update_error1">You have not update your profile , please update your profile.</string>
    <string name="account_see_error">Your login details does not exists, please login to perform any action.</string>
    <string name="recharge_payment_mode">Please select payment mode.</string>
    <string name="recharge_payment_balance_error">Your account doesn\'t have enough balance to buy topup</string>
    <string name="recharge_partial_pay1">You are about to pay </string>
    <string name="recharge_partial_pay2"> purchase of topup . Please confirm ?</string>
    <string name="gift_card__pay">purchase of Gift Card . Please confirm ?</string>
    <string name="carddetails_card_title">Card details</string>
    <string name="carddetails_subhead">Please Verify your card information before submission.</string>
    <string name="carddetails_card_number_field_label">Card number</string>
    <string name="carddetails_card_number_field_label1">Account number</string>
    <string name="carddetails_cardholder_field_label">Cardholder name</string>
    <string name="carddetails_cardholder_field_label1">Account Holder name</string>
    <string name="carddetails_expiry_date_field_label">Expiry date</string>
    <string name="carddetails_cvv_label">CVV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trans_note">Note</string>
    <string name="trans_info">Length of transaction pin should be  six digits.</string>
    <string name="screen_note">Note</string>
    <string name="screen_info">Length of screen lock pin should be  four digits.</string>
    <string name="update_note">Note</string>
    <string name="update_note_info">Please verify your details before updating the profile,Transaction pin should be 6 digits numeric and Screen lock pin should be 4 digits numeric</string>
    <string name="required_filled">"Please fill all required filled "</string>
    <string name="merchant_inactive_error">Merchant is Inactive ,Please contact admin</string>
    <string name="merchant_same_account">From and To account cannot be the same</string>
    <string name="merchant_balance_error">Your account doesn\'t have enough balance to transfer</string>
    <string name="merchant_partial_pay1">You are about to pay </string>
    <string name="merchant_partial_pay2">  Please confirm ?</string>
    <string name="wallet_header">Transfer Money</string>
    <string name="mobile_no_error">Mobile No. Error</string>
    <string name="mobile_no_error_info">You  cannot search your own registered mobile number.</string>
    <string name="info_old_transaction_pin">Enter transaction pin.</string>
    <string name="info_new_transaction_pin">Confirm transaction pin.</string>
    <string name="info_transaction_pin_length">Pin should be 6 digit length</string>
    <string name="info_old_password">Enter old password.</string>
    <string name="info_new_password">Create new password</string>
    <string name="info_confirm_your_password">Confirm your password</string>
    <string name="info_mismatch">mismatch</string>
    <string name="info_security_question1">Enter security question 1</string>
    <string name="info_security_answer1">Enter security answer 1</string>
    <string name="info_security_question2">Enter security question 2</string>
    <string name="info_security_answer2">Enter security answer 2</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="info_receiver_mobile_number">Enter receiver mobile number</string>
    <string name="info_valid_mobile_number">Enter valid mobile number</string>
    <string name="info_phone_top_up">Amount to Top-Up</string>
    <string name="info_select_dob">please select date of birth</string>
    <string name="search_info_transfer_money">Search by Mobile number for amount transfer</string>
    <string name="search_info_request_money">Search by Mobile number for request money</string>
    <string name="sign_in">Sign In</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="info_select_bank">Please select bank</string>
    <string name="info_select_account_type">Please select account type</string>
    <string name="info_account_holder_name">Enter account holder name</string>
    <string name="info_bank_account_number">Enter bank account number</string>
    <string name="info_enter_transfer_ammount">Enter transfer amount</string>
    <string name="info_enter_fund_ammount">Enter fund amount</string>
    <string name="info_fund_wallet">Fund Wallet </string>
    <string name="info_add_fund_by_card">Add Funds By Card</string>
    <string name="info_add_money">Add Money</string>
    <string name="info_add_money_sistema">Add Money By Sistema Clave</string>
    <string name="info_select_currency">Please select currency</string>
    <string name="info_invalid_transactipon_pin">Invalid transaction pin</string>
    <string name="info_sufficient_fund">Your account dosent have sufficient fund</string>
    <string name="info_payment_failed_try_after">Failed to make payment ,Please try after sometime.</string>
    <string name="info_action_payments">Payments</string>
    <string name="info_action_recharge">Recharge</string>
    <string name="info_action_add_money">Add Money</string>
    <string name="info_action_pay">Pay</string>
    <string name="info_action_transactions">Transactions</string>
    <string name="info_mapping_user">Please wait, Mapping user.</string>
    <string name="info_generating_otp">Generating otp for verification.</string>
    <string name="info_verifying_user">Verifying user details.</string>
    <string name="info_login_successfull">Login successful!</string>
    <string name="info_login_failed">Login failed! Please try again later</string>
    <string name="info_enter_mobile_number">Enter mobile number</string>
    <string name="info_enter_password">Enter password</string>
    <string name="info_enter_otp">Please enter OTP</string>
    <string name="info_verifying_otp">Verifying OTP.</string>
    <string name="info_verification_failed_given_otp">verification failed with given otp</string>
    <string name="info_otp_request_failed">Otp request failed</string>
    <string name="info_get_back_offer">Register today, and get 10% cashback</string>
    <string name="info_verify_your_phone_number">Verify your phone number</string>
    <string name="info_resend_otp">Resend OTP</string>
    <string name="info_already_registered">Already Registered?</string>
    <string name="info_sign_in">Sign In</string>
    <string name="info_enter_phone_number">Enter phone number</string>
    <string name="info_appopay_will_send_otp">Appopay will send a One Time Password</string>
    <string name="info_enter_valid_phone_number">Please enter a valid phone no.</string>
    <string name="info_sending_otp">Please wait sending OTP.</string>
    <string name="info_verify_your_phone_number2">Please verify your phone number</string>
    <string name="info_request_otp_failed">Otp request failed.</string>
    <string name="info_register_today_early_benifit">Register for Free</string>
    <string name="info_hint_full_name">Full Name</string>
    <string name="info_hint_email">Email</string>
    <string name="info_hint_password">Password</string>
    <string name="info_please_select_your_country">Please select your country</string>
    <string name="info_english">English</string>
    <string name="info_spanish">Español</string>
    <string name="info_create_account">Create Account</string>
    <string name="ifo_terms_conditions"><![CDATA[Agree to the Terms & Conditions]]></string>
    <string name="info_have_an_account">Have an account ?</string>
    <string name="info_log_in_now">Log In Now</string>
    <string name="info_enter_name">Enter name</string>
    <string name="info_enter_email">Enter email</string>
    <string name="info_enter_password_atleast_6_digits">Enter password,with atleast 6 digit</string>
    <string name="info_getting_country_code">Getting country code</string>
    <string name="info_enter_first_name_lasr_name">please enter first and last name</string>
    <string name="info_enter_emial_id">please enter valid email id</string>
    <string name="info_select_country_first">please select your country code first</string>
    <string name="info_seletct_prefer_language">Please select your prefer language</string>
    <string name="info_please_accept_term_condition">please accept term and condition to continue.</string>
    <string name="info_verifying_mobile_number">Verifying mobile number.</string>
    <string name="error_phone_number_already_exists">Phone number already exists</string>
    <string name="error_phone_verification_failed">Phone verification failed</string>
    <string name="error_email_already_exists">Email already exist</string>
    <string name="error_email_verification_failed">Email verification failed</string>
    <string name="error_account_creation_failed">Account creation failed</string>
    <string name="error_request_account_creation_failed">\"Request for account creation failed \"</string>
    <string name="info_home">Home</string>
    <string name="info_transfer">Transfer</string>
    <string name="info_chat">Chat</string>
    <string name="info_close">Close</string>
    <string name="info_pay_to_merchant">Pay To Merchant</string>
    <string name="info_ok">Ok</string>
    <string name="info_instant_discount_amount">Instant Discount Amount :</string>
    <string name="info_sale_amount">Sale Amount :</string>
    <string name="info_amount_union">Amount :</string>
    <string name="info_amount_after_discount">Amount After Discount :</string>
    <string name="info_currency">Currency :</string>
    <string name="info_transaction_time">Transaction Time :</string>
    <string name="info_voucher_no">Voucher No :</string>
    <string name="info_success">SUCCESS</string>
    <string name="info_card_enrollment">Card Enrollment</string>
    <string name="info_card_unmask">Card Unmask</string>
    <string name="info_1_if_you_are_a_new_customer">1. If you are a new customer please click on CARD ENROLLMENT.</string>
    <string name="info_2_if_you_have_already_a_unionpay_card">2. If you would like to see the details of your UnionPay Virtual Card, please click on UNMASK CARD.</string>
    <string name="info_link_your_card">Link Your Card</string>
    <string name="info_open_new_account">Open New Account</string>
    <string name="info_select_your_app_language">Select Your App Language</string>
    <string name="info_apply">Apply</string>
    <string name="schedule_op_time_up">Choose your hours of operation</string>
    <string name="schedule_select_time_up">Open at selected hours</string>
    <string name="schedule_all_time_up">Open all day</string>
    <string name="schedule_reserve_time_up">By appointment only</string>
    <string name="info_profile_update_error">Profile Update Error</string>
    <string name="info_update">Update</string>
</resources>