<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/appopay_gift_card" />

        <com.stuffer.stuffers.views.MyTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/info_pay_to_merchant"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/iv_tick_new"
        android:visibility="gone"
        app:tint="#1A9B00"

        />

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_cancel_payment"
        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/merchant_inactive_error"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.stuffer.stuffers.views.MyTextViewBold
        android:id="@+id/tvAmountPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_amount_union"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"

        />


    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/info_sale_amount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"

        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvDiscAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:text="@string/info_instant_discount_amount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"
        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:layout_gravity="center"
        android:id="@+id/tvFinalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/info_amount_after_discount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"

        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvCurrencyPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/info_currency"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvTransactionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/info_transaction_time"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvVoucherPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/info_voucher_no"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">


        <com.stuffer.stuffers.views.MyButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_ok"
            android:textColor="@color/white"
            android:theme="@style/MaterialButton" />


    </LinearLayout>


</LinearLayout>