<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/appopay_gift_card" />

        <com.stuffer.stuffers.views.MyTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="Cust Presented Qr Code"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/iv_tick_new"
        app:tint="#1A9B00" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvInfoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/info_success"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.stuffer.stuffers.views.MyTextViewBold
        android:id="@+id/tvAmountPayD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_amount_union"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"


        />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvSalesAmountD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/info_sale_amount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp"

        />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvDiscAmountD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/info_instant_discount_amount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvFinalAmountD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/info_amount_after_discount"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvCurrencyPayD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/info_currency"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp" />

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvTransactionTimeD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/info_transaction_time"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="14sp" />

    <com.stuffer.stuffers.views.MyButton
        android:layout_gravity="end"
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_ok"
        android:textColor="@color/white"
        android:theme="@style/MaterialButton" />




</LinearLayout>