<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo2" />
<!--android:text="Select Your Preferred App Language."-->
    <com.stuffer.stuffers.views.MyTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/info_select_your_app_language"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.stuffer.stuffers.views.MyRadioButton
            android:layout_width="match_parent"
            android:id="@+id/rbEnglish"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_english" />

        <com.stuffer.stuffers.views.MyRadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_spanish" />


    </RadioGroup>

    <com.stuffer.stuffers.views.MyButton
        android:id="@+id/btnApplyLan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/info_apply"
        android:textColor="@color/white"
        android:theme="@style/MaterialButton"

        />


</LinearLayout>