<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        
        android:icon="@drawable/ic_home"
        android:title="@string/info_home" />

    <!--<item
        android:id="@+id/action_shopping"
        android:icon="@drawable/ic_shopping"
        android:title="@string/info_mall" />-->

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_scan"
        android:title="UnionPay" />

    <!--<item android:id="@+id/action_inner"
        android:icon="@drawable/ic_scan"
        android:title="AppoPay"

        />-->


    <item
        android:id="@+id/action_bank"
        android:icon="@drawable/ic_transfer_money"
        app:iconTint="#052F73"
        android:title="@string/info_transfer" />


    <!--
    <item
            android:id="@+id/action_bank"
            android:icon="@drawable/ic_bank"
            android:title="Bank" />
    -->


    <item
        android:id="@+id/action_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/info_chat" />




</menu>