<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_14"
    android:layout_marginRight="@dimen/dp_14"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_select_picture_dialog_bg"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:gravity="center_vertical"
            android:text="@string/schedule_op_time_up"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/schedule_select_time_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:background="@drawable/selector_select_picture_top_corners"
            android:gravity="center_vertical"
            android:text="@string/schedule_select_time_up"
            android:textAllCaps="false"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_17" />

        <TextView
            android:id="@+id/schedule_all_time_up"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/selector_select_picture_bottom_corners"
            android:gravity="center_vertical"
            android:text="@string/schedule_all_time_up"
            android:textAllCaps="false"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_17" />

        <TextView
            android:id="@+id/schedule_reserve_time_up"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/selector_select_picture_bottom_corners"
            android:gravity="center_vertical"
            android:text="@string/schedule_reserve_time_up"
            android:textAllCaps="false"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>
</LinearLayout>