<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/appopay_gift_card" />
        <com.stuffer.stuffers.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/info_profile_update_error"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


    </LinearLayout>

    <com.stuffer.stuffers.views.MyTextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/setting_error"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.stuffer.stuffers.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Do you want to Login?"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.stuffer.stuffers.views.MyButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/info_update"
            android:textColor="@color/white"
            android:theme="@style/MaterialButton" />

        <com.stuffer.stuffers.views.MyButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_close"
            android:textColor="@color/white"
            android:theme="@style/MaterialButton" />


    </LinearLayout>


</LinearLayout>